--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ footer {
     </div>
 
     <div class="explore-wrapper">
-      <a href="#" class="btn">Explore</a>
+      <a href="#products" class="btn">Explore</a>
     </div>
   </section>
 
