--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    <!-- Product 1 -->
     <div class="product-card">
       <img src="product2.jpg" alt="Product 1">
-      <h3>Personalized Frame</h3>
+      <h3>Personalised Frame</h3>
       <p>A mystery box that reveals hidden messages in a creative way.</p>
       <span class="price-tag">₹299</span>
       <button class="btn-pr">Shop Now</button>
