--- a/index.html
+++ b/index.html
@@ -6,34 +6,26 @@
   <title>Miso | You Imagine, We Create</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
-  <header>
-    <!-- Navber  -->
-    <div class="brand">
-      <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
-      <span class="nav-logo">Miso</span>
-    </div>
-   <nav>
-    <a href="#" aria-label="Home">
-     <i class="fas fa-home"></i>Home
-    </a>
-    <a href="#about" aria-label="About">
-      <i class="fas fa-user"></i>About
-    </a>
-    <a href="#footer" aria-label="Contact">
-     <i class="fas fa-envelope"></i>Contact
-    </a>
+ <header>
+  <div class="brand">
+    <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
+    <span class="nav-logo">Miso</span>
+  </div>
+  <nav>
+    <a href="#"><i class="fas fa-home"></i>Home</a>
+    <a href="#about"><i class="fas fa-user"></i>About</a>
+    <a href="#footer"><i class="fas fa-envelope"></i>Contact</a>
   </nav>
+</header>
 
-  </header>
-    
   <div class="container">
     <div class="tagline">You Imagine, We Create</div>
   </div>
 
   <section id="about">
-    <!-- About section -->
     <h2>About Miso</h2>
     <p>
      Miso is a creative startup redefining emotional gifting through imagination, personalization, and design. 
@@ -43,7 +35,6 @@
     </p>
   </section>
 
-  <!-- Featured product section -->
   <section id="featured">
     <h2>Featured Products</h2>
     <div class="featured-grid">
@@ -55,7 +46,6 @@
           <a href="#" class="btn">Shop Now</a>
         </div>
       </div>
-
       <div class="featured-card">
         <img src="product1.jpg" alt="Magic Message Box" />
         <div class="featured-content">
@@ -65,80 +55,72 @@
         </div>
       </div>
     </div>
-
     <div class="explore-wrapper">
       <a href="#products" class="btn">Explore</a>
     </div>
   </section>
 
-<!-- Products section -->
-<section id="products">
-  <h2>Our Products</h2>
-  <div class="product-grid">
-   <!-- Product 1 -->
-    <div class="product-card">
-      <img src="product2.jpg" alt="Product 1">
-      <h3>Personalised Frame</h3>
-      <p>A mystery box that reveals hidden messages in a creative way.</p>
-      <span class="price-tag">₹299</span>
-      <button class="btn-pr">Shop Now</button>
-    </div>
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="product2.jpg" alt="Product 1">
+        <h3>Personalized Frame</h3>
+        <p>Custom-made photo frame with messages for your loved ones.</p>
+        <span class="price-tag">₹299</span>
+        <button class="btn-pr">Shop Now</button>
+      </div>
 
-    <!-- Product 2 -->
-    <div class="product-card">
-      <img src="product3.jpg" alt="Product 2">
-      <h3>Star Map Night Sky Frame</h3>
-      <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
-      <span class="price-tag">₹299</span>
-      <button class="btn-pr">Shop Now</button>
-    </div>
+      <div class="product-card">
+        <img src="product3.jpg" alt="Product 2">
+        <h3>Star Map Night Sky Frame</h3>
+        <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
+        <span class="price-tag">₹299</span>
+        <button class="btn-pr">Shop Now</button>
+      </div>
 
-    <!-- Product 3 -->
-    <div class="product-card">
-      <img src="product1.jpg" alt="Product 3">
-      <h3>Magic Message Box</h3>
-      <p>A mystery box that reveals hidden messages in a creative way.</p>
-      <span class="price-tag">₹499</span>
-      <button class="btn-pr">Shop Now</button>
-    </div>
+      <div class="product-card">
+        <img src="product1.jpg" alt="Product 3">
+        <h3>Magic Message Box</h3>
+        <p>A mystery box that reveals hidden messages in a creative way.</p>
+        <span class="price-tag">₹499</span>
+        <button class="btn-pr">Shop Now</button>
+      </div>
 
-    <!-- Product 4 -->
-    <div class="product-card">
-      <img src="product4.jpg" alt="Product 4">
-      <h3>Customized Mug</h3>
-      <p>Because caffeine tastes better when your face is on the mug!</p>
-      <span class="price-tag">₹199</span>
-      <button class="btn-pr">Shop Now</button>
+      <div class="product-card">
+        <img src="product4.jpg" alt="Product 4">
+        <h3>Customized Mug</h3>
+        <p>Because caffeine tastes better when your face is on the mug!</p>
+        <span class="price-tag">₹199</span>
+        <button class="btn-pr">Shop Now</button>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Footer section -->
-<footer id="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 Miso. All rights reserved.</p>
-    <p>
-      <a href="mailto:hellomiso@gmail.com">
-        <i class="fas fa-envelope"></i> hellomiso@gmail.com
-      </a>
-    </p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/miso" target="_blank" aria-label="Facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/miso" target="_blank" aria-label="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.twitter.com/miso" target="_blank" aria-label="Twitter">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://www.linkedin.com/company/miso" target="_blank" aria-label="LinkedIn">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
+  <footer id="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 Miso. All rights reserved.</p>
+      <p>
+        <a href="mailto:hellomiso@gmail.com">
+          <i class="fas fa-envelope"></i> hellomiso@gmail.com
+        </a>
+      </p>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/miso" target="_blank" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/miso" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.twitter.com/miso" target="_blank" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/miso" target="_blank" aria-label="LinkedIn">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
-
+  </footer>
 
 </body>
 </html>
