--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <div class="product-grid">
       <div class="product-card">
         <img src="product2.jpg" alt="Product 1">
-        <h3>Personalized Frame</h3>
+        <h3>Personalised Frame</h3>
         <p>Custom-made photo frame with messages for your loved ones.</p>
         <span class="price-tag">₹299</span>
-        <button class="btn-pr">Shop Now</button>
+        <a href="product-personalized-frame.html" class="btn-pr">Shop Now</a>
       </div>
 
       <div class="product-card">
@@ -76,7 +76,7 @@
         <h3>Star Map Night Sky Frame</h3>
         <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
         <span class="price-tag">₹299</span>
-        <button class="btn-pr">Shop Now</button>
+        <a href="product-star-map.html" class="btn-pr">Shop Now</a>
       </div>
 
       <div class="product-card">
@@ -84,7 +84,7 @@
         <h3>Magic Message Box</h3>
         <p>A mystery box that reveals hidden messages in a creative way.</p>
         <span class="price-tag">₹499</span>
-        <button class="btn-pr">Shop Now</button>
+        <a href="product-message-box.html" class="btn-pr">Shop Now</a>
       </div>
 
       <div class="product-card">
@@ -92,7 +92,7 @@
         <h3>Customized Mug</h3>
         <p>Because caffeine tastes better when your face is on the mug!</p>
         <span class="price-tag">₹199</span>
-        <button class="btn-pr">Shop Now</button>
+        <a href="product-mug.html" class="btn-pr">Shop Now</a>
       </div>
     </div>
   </section>
