--- a/product-message-box.html
+++ b/product-message-box.html
@@ -12,6 +12,7 @@
     <p>A mystery box that reveals hidden messages in a creative way.</p>
     <h2>Price: ₹499</h2>
     <button class="btn-pr">Buy Now</button>
+    <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
 </body>
 </html>
