--- a/product-mug.html
+++ b/product-mug.html
@@ -12,6 +12,7 @@
     <p>Because caffeine tastes better when your face is on the mug!</p>
     <h2>Price: ₹199</h2>
     <button class="btn-pr">Buy Now</button>
+    <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
 </body>
 </html>
