--- a/product-star-map.html
+++ b/product-star-map.html
@@ -12,6 +12,7 @@
     <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
     <h2>Price: ₹299</h2>
     <button class="btn-pr">Buy Now</button>
+    <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
 </body>
 </html>
