--- a/product-personalized-frame.html
+++ b/product-personalized-frame.html
@@ -12,6 +12,7 @@
     <p>Custom-made photo frame with messages for your loved ones.</p>
     <h2>Price: ₹299</h2>
     <button class="btn-pr">Buy Now</button>
+    <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
 </body>
 </html>
