--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
 
+  <!-- Header or Navber -->
  <header>
   <div class="brand">
     <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
     <span class="nav-logo">Miso</span>
   </div>
+
+  <div class="search-bar">
+  <input type="text" placeholder="Search products..." />
+  <button><i class="fas fa-search"></i></button>
+  </div>
+
   <nav>
     <a href="#"><i class="fas fa-home"></i>Home</a>
     <a href="#about"><i class="fas fa-user"></i>About</a>
@@ -21,9 +28,17 @@
   </nav>
 </header>
 
-  <div class="container">
-    <div class="tagline">You Imagine, We Create</div>
+<!-- Hero section -->
+
+<section class="hero-section-with-bg">
+  <div class="hero-text">
+    <h1>You Imagine, We Create</h1>
+    <p>Crafting Emotion Through Personalized Gifts</p>
   </div>
+</section>
+
+
+  <!-- About Section -->
 
   <section id="about">
     <h2>About Miso</h2>
@@ -34,6 +49,8 @@
      Our belief: <b>"You Imagine, We Create."</b>
     </p>
   </section>
+
+  <!-- Featured Product Section --> 
 
   <section id="featured">
     <h2>Featured Products</h2>
@@ -59,6 +76,8 @@
       <a href="#products" class="btn">Explore</a>
     </div>
   </section>
+
+<!-- Product Section -->
 
   <section id="products">
     <h2>Our Products</h2>
@@ -97,6 +116,7 @@
     </div>
   </section>
 
+<!-- Footer section -->
   <footer id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Miso. All rights reserved.</p>
