--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="featured-card">
         <img src="product2.jpg" alt="Personalized Frame" />
         <div class="featured-content">
-          <h3>Personalized Frame</h3>
+          <h3>Personalised Frame</h3>
           <p>Custom-made photo frame with messages for your loved ones.</p>
           <a href="#" class="btn">Shop Now</a>
         </div>
@@ -108,10 +108,18 @@
 
       <div class="product-card">
         <img src="product4.jpg" alt="Product 4">
-        <h3>Customized Mug</h3>
+        <h3>Customised Mug</h3>
         <p>Because caffeine tastes better when your face is on the mug!</p>
         <span class="price-tag">₹199</span>
         <a href="product-mug.html" class="btn-pr">Shop Now</a>
+      </div>
+
+      <div class="product-card">
+        <img src="product5.png" alt="Product 5">
+        <h3> Miso Sunny Keychain</h3>
+        <p>Carry a little sunshine with you — a cheerful charm to brighten someone's day.</p>
+        <span class="price-tag">₹99</span>
+        <a href="product-keychain.html" class="btn-pr">Shop Now</a>
       </div>
     </div>
   </section>
@@ -129,13 +137,10 @@
         <a href="https://www.facebook.com/miso" target="_blank" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://www.instagram.com/miso" target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/miso__by_arin?igsh=bGFxdm4yNDhqNWcw" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.twitter.com/miso" target="_blank" aria-label="Twitter">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://www.linkedin.com/company/miso" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/company/miso-creations/" target="_blank" aria-label="LinkedIn">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
