--- a/product-keychain.html
+++ b/product-keychain.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Star Map Night Sky Frame | Miso</title>
+  <title>Personalised Frame | Miso</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -27,13 +27,14 @@
 </header>
 
   <div class="container">
-    <h1>Star Map Night Sky Frame</h1>
-    <img src="product3.jpg" alt="Star Map Frame" />
-    <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
-    <h2>Price: ₹299</h2>
+    <h1>Miso Sunny Keychain</h1>
+    <img src="product5.png" alt="Keychain" />
+    <p>Carry a little sunshine with you — a cheerful charm to brighten someone's day.</p>
+    <h2>Price: ₹99</h2>
     <button class="btn-pr">Buy Now</button>
     <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
+
    <!-- Review Section -->
     <section id="reviews">
      <h2>Customer Reviews</h2>
@@ -55,7 +56,7 @@
          </div>
        </div>
     </section>
-
+ 
     <!-- Footer section -->
   <footer id="footer">
     <div class="footer-content">
