--- a/index.html
+++ b/index.html
@@ -9,54 +9,50 @@
 </head>
 <body>
 
-  <!-- Header or Navber -->
- <header>
-  <div class="brand">
-    <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
-    <span class="nav-logo">Miso</span>
-  </div>
+  <!-- Header -->
+  <header>
+    <div class="brand">
+      <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
+      <span class="nav-logo">Miso</span>
+    </div>
 
-  <div class="search-bar">
-  <input type="text" placeholder="Search products..." />
-  <button><i class="fas fa-search"></i></button>
-  </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search products..." />
+      <button><i class="fas fa-search"></i></button>
+    </div>
 
-  <nav>
-    <a href="#"><i class="fas fa-home"></i>Home</a>
-    <a href="#about"><i class="fas fa-user"></i>About</a>
-    <a href="#footer"><i class="fas fa-envelope"></i>Contact</a>
-  </nav>
-</header>
+    <nav>
+      <a href="#"><i class="fas fa-home"></i>Home</a>
+      <a href="#about"><i class="fas fa-user"></i>About</a>
+      <a href="#footer"><i class="fas fa-envelope"></i>Contact</a>
+    </nav>
+  </header>
 
-<!-- Hero section -->
-
-<section class="hero-section-with-bg">
-  <div class="hero-text">
-    <h1>You Imagine, We Create</h1>
-    <p>Crafting Emotion Through Personalized Gifts</p>
-  </div>
-</section>
-
+  <!-- Hero Section -->
+  <section class="hero-section-with-bg">
+    <div class="hero-text">
+      <h1>You Imagine, We Create</h1>
+      <p>Crafting Emotion Through Personalised Gifts</p>
+    </div>
+  </section>
 
   <!-- About Section -->
-
   <section id="about">
     <h2>About Miso</h2>
     <p>
-     Miso is a creative startup redefining emotional gifting through imagination, personalization, and design. 
-     We create digital-first experiences that help people express what truly matters.<br>
-     We believe in combining technology and creativity to build memorable moments.<br>
-     Our belief: <b>"You Imagine, We Create."</b>
+      Miso is a creative start-up redefining emotional gifting through imagination, personalisation, and design. 
+      We create digital-first experiences that help people express what truly matters.<br>
+      We believe in combining technology and creativity to build memorable moments.<br>
+      Our belief: <b>"You Imagine, We Create."</b>
     </p>
   </section>
 
   <!-- Featured Product Section --> 
-
   <section id="featured">
     <h2>Featured Products</h2>
     <div class="featured-grid">
       <div class="featured-card">
-        <img src="product2.jpg" alt="Personalized Frame" />
+        <img src="product2.jpg" alt="Personalised Frame" />
         <div class="featured-content">
           <h3>Personalised Frame</h3>
           <p>Custom-made photo frame with messages for your loved ones.</p>
@@ -77,8 +73,7 @@
     </div>
   </section>
 
-<!-- Product Section -->
-
+  <!-- Product Section -->
   <section id="products">
     <h2>Our Products</h2>
     <div class="product-grid">
@@ -93,7 +88,7 @@
       <div class="product-card">
         <img src="product3.jpg" alt="Product 2">
         <h3>Star Map Night Sky Frame</h3>
-        <p>Freeze the stars from your special night in a timeless, personalized frame.</p>
+        <p>Freeze the stars from your special night in a timeless, personalised frame.</p>
         <span class="price-tag">₹299</span>
         <a href="product-star-map.html" class="btn-pr">Shop Now</a>
       </div>
@@ -116,15 +111,15 @@
 
       <div class="product-card">
         <img src="product5.png" alt="Product 5">
-        <h3> Miso Sunny Keychain</h3>
-        <p>Carry a little sunshine with you — a cheerful charm to brighten someone's day.</p>
+        <h3>Miso Sunny Keyring</h3>
+        <p>Carry a little sunshine with you — a cheerful charm to brighten someone’s day.</p>
         <span class="price-tag">₹99</span>
         <a href="product-keychain.html" class="btn-pr">Shop Now</a>
       </div>
     </div>
   </section>
 
-<!-- Footer section -->
+  <!-- Footer Section -->
   <footer id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Miso. All rights reserved.</p>
