--- a/product-message-box.html
+++ b/product-message-box.html
@@ -7,55 +7,57 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header>
-  <div class="brand">
-    <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
-    <span class="nav-logo">Miso</span>
-  </div>
 
-  <div class="search-bar">
-  <input type="text" placeholder="Search products..." />
-  <button><i class="fas fa-search"></i></button>
-  </div>
+  <header>
+    <div class="brand">
+      <img src="logo-3.png" alt="Miso Logo" class="logo-icon" />
+      <span class="nav-logo">Miso</span>
+    </div>
 
-  <nav>
-    <a href="#"><i class="fas fa-home"></i>Home</a>
-    <a href="#about"><i class="fas fa-user"></i>About</a>
-    <a href="#footer"><i class="fas fa-envelope"></i>Contact</a>
-  </nav>
-</header>
+    <div class="search-bar">
+      <input type="text" placeholder="Search products..." />
+      <button><i class="fas fa-search"></i></button>
+    </div>
+
+    <nav>
+      <a href="#"><i class="fas fa-home"></i>Home</a>
+      <a href="#about"><i class="fas fa-user"></i>About</a>
+      <a href="#footer"><i class="fas fa-envelope"></i>Contact</a>
+    </nav>
+  </header>
 
   <div class="container">
     <h1>Magic Message Box</h1>
-    <img src="product1.jpg" alt="Magic Message Box" />
-    <p>A mystery box that reveals hidden messages in a creative way.</p>
-    <h2>Price: ₹499</h2>
+    <img src="product4.jpg" alt="Magic Message Box" />
+    <p>Pull out one message at a time—this little box of joy holds memories, love notes, and affirmations just for them.</p>
+    <h2>Price: ₹299</h2>
     <button class="btn-pr">Buy Now</button>
     <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
-   <!-- Review Section -->
-    <section id="reviews">
-     <h2>Customer Reviews</h2>
-       <div class="review-list">
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
-          <p>"Loved this so much! It made the perfect gift."</p>
-          <span>- Ananya S.</span>
-         </div>
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️</p>
-          <p>"Well designed and very affordable. Will buy again."</p>
-          <span>- Rishi K.</span>
-         </div>
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
-          <p>"Unique and thoughtful. Delivered earlier than expected!"</p>
-          <span>- Megha D.</span>
-         </div>
-       </div>
-    </section>
 
-    <!-- Footer section -->
+  <!-- Review Section -->
+  <section id="reviews">
+    <h2>Customer Reviews</h2>
+    <div class="review-list">
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
+        <p>"Loved this so much! It made the perfect gift."</p>
+        <span>- Ananya S.</span>
+      </div>
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️</p>
+        <p>"Well designed and very affordable. Will buy again."</p>
+        <span>- Rishi K.</span>
+      </div>
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
+        <p>"Unique and thoughtful. Delivered earlier than expected!"</p>
+        <span>- Megha D.</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
   <footer id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Miso. All rights reserved.</p>
