--- a/product-mug.html
+++ b/product-mug.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Customized Mug | Miso</title>
+  <title>Customised Mug | Miso</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,8 +15,8 @@
   </div>
 
   <div class="search-bar">
-  <input type="text" placeholder="Search products..." />
-  <button><i class="fas fa-search"></i></button>
+    <input type="text" placeholder="Search products..." />
+    <button><i class="fas fa-search"></i></button>
   </div>
 
   <nav>
@@ -27,57 +27,39 @@
 </header>
 
   <div class="container">
-    <h1>Customized Mug</h1>
-    <img src="product4.jpg" alt="Customized Mug" />
-    <p>Because caffeine tastes better when your face is on the mug!</p>
+    <h1>Customised Mug</h1>
+    <img src="product4.jpg" alt="Customised Mug" />
+    <p>Because tea or coffee tastes even better with your face on the mug!</p>
     <h2>Price: ₹199</h2>
     <button class="btn-pr">Buy Now</button>
     <a href="index.html" class="btn-pr">← Back to Home</a>
   </div>
-   <!-- Review Section -->
-    <section id="reviews">
-     <h2>Customer Reviews</h2>
-       <div class="review-list">
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
-          <p>"Loved this so much! It made the perfect gift."</p>
-          <span>- Ananya S.</span>
-         </div>
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️</p>
-          <p>"Well designed and very affordable. Will buy again."</p>
-          <span>- Rishi K.</span>
-         </div>
-         <div class="review-card">
-          <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
-          <p>"Unique and thoughtful. Delivered earlier than expected!"</p>
-          <span>- Megha D.</span>
-         </div>
-       </div>
-    </section>
 
-    <!-- Footer section -->
+  <!-- Review Section -->
+  <section id="reviews">
+    <h2>Customer Reviews</h2>
+    <div class="review-list">
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
+        <p>"Absolutely loved it! Made the perfect present."</p>
+        <span>- Ananya S.</span>
+      </div>
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️</p>
+        <p>"Nicely crafted and very reasonably priced. Will order again."</p>
+        <span>- Rishi K.</span>
+      </div>
+      <div class="review-card">
+        <p class="stars">⭐️⭐️⭐️⭐️⭐️</p>
+        <p>"Unique and thoughtful. Arrived earlier than expected!"</p>
+        <span>- Megha D.</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer section -->
   <footer id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Miso. All rights reserved.</p>
       <p>
-        <a href="mailto:hellomiso@gmail.com">
-          <i class="fas fa-envelope"></i> hellomiso@gmail.com
-        </a>
-      </p>
-      <div class="social-icons">
-        <a href="https://www.facebook.com/miso" target="_blank" aria-label="Facebook">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://www.instagram.com/miso" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.linkedin.com/company/miso" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-      </div>
-    </div>
-  </footer>
-
-</body>
-</html>
+        <a
